// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapLinks renders consistently with a single map 1`] = `
<article
  class="section"
>
  <section
    class="body"
  >
    <div>
      <a
        class="link withArrow"
        href="testurl"
        rel="noopener noreferrer"
        target="_blank"
      >
        Satamakartta (PDF)
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv arrow"
          color="brand"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 24V0h24v24z"
            />
            <path
              d="M13 12.5l-5-5L9.5 6l6.5 6.5L9.5 19 8 17.5z"
              fill="currentColor"
            />
          </g>
        </svg>
      </a>
    </div>
  </section>
</article>
`;

exports[`MapLinks renders consistently with multiple maps 1`] = `
<article
  class="section"
>
  <section
    class="body"
  >
    <div>
      <a
        class="link withArrow"
        href="testurl"
        rel="noopener noreferrer"
        target="_blank"
      >
        Satamakartta 1 (PDF)
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv arrow"
          color="brand"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 24V0h24v24z"
            />
            <path
              d="M13 12.5l-5-5L9.5 6l6.5 6.5L9.5 19 8 17.5z"
              fill="currentColor"
            />
          </g>
        </svg>
      </a>
    </div>
    <div>
      <a
        class="link withArrow"
        href="testurl"
        rel="noopener noreferrer"
        target="_blank"
      >
        Satamakartta 2 (PDF)
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv arrow"
          color="brand"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 24V0h24v24z"
            />
            <path
              d="M13 12.5l-5-5L9.5 6l6.5 6.5L9.5 19 8 17.5z"
              fill="currentColor"
            />
          </g>
        </svg>
      </a>
    </div>
  </section>
</article>
`;
